exercicio tabuada pronto

--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     
     <section>
         <div>
-            testando
+            <label for="numero">Número: <input type="number" name="numero" id="numero"></label>
+            <input type="button" value="Gerar Tabuada" onclick="calcular()">
         </div>
         <div>
-            Olá
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
 
